<resources>
    <string name="app_name">Gmail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gmail</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_all_inbox">All Inboxs</string>
    <string name="nav_primary">Primary</string>
    <string name="nav_social">Social</string>
    <string name="nav_promotions">Promotions</string>
    <string name="nav_updates">Updates</string>
    <string name="nav_forums">Forums</string>
    <string name="recent_labels">RECENT LABELS</string>
    <string name="nav_linked_in">LinkedIn</string>
    <string name="nav_starred">Starred</string>
    <string name="nav_snoozed">Snoozed</string>
    <string name="nav_important">Important</string>
    <string name="nav_sent">Sent</string>
    <string name="nav_scheduled">Scheduled</string>
    <string name="nav_outbox">Outbox</string>
    <string name="nav_draft">Draft</string>
</resources>
